--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pass the message</title>
 </head>
-<body>
+<body style="white-space: pre-wrap">
     <textarea id="inputField" name="inputField" rows="4" cols="50"></textarea>
+    <p>   x = unsupported character</p>
     <p id="output"></p>
     <script src="script.js"></script>
 </body>
